# CodingTrain

cpp/: .clang-format  .cmake-format.json  .editorconfig  CMakeLists.txt  CMakePresets.json
cpp/challenges/: CMakeLists.txt
cpp/challenges/c001_starfield/: CMakeLists.txt  constants.hpp  main.cpp  star.cpp  star.hpp
cpp/challenges/c003_snake/: CMakeLists.txt  main.cpp  snake.cpp  snake.hpp
cpp/cpprocessing/: CMakeLists.txt
cpp/cpprocessing/include/cpprocessing/math/: map.hpp
